test/testdata/functions/anonymous/unused_parameter_error.lox
// error: z has been declared but is never used
var add = fun(x, y, z) {
  return x + y;
};
